<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--  General and Defaults -->
    <string name="app_name">Bitcoinium</string>
    <string name="version_name">1.7.0a</string>
    <string name="default_exchange">MtGoxExchange</string>
    <string name="default_miningpool">BitMinter</string>
    <string name="default_currency">USD</string>
    
    <!--  Widget Strings -->
    <string name ="price_widget_name">Bitcoinium Price</string>
    <string name ="mining_widget_name">Bitcoinium Mining</string>
    <string name="exchange">Exchange</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="last">Last</string>
    <string name="vol">Volume</string>
    <string name="time">Time</string>
    <string name="widget_button">widgetButton</string>
    
    <!--  Miner Widget Strings -->
    <string name="miner">Miner</string>
    <string name="hashrate">Hashrate</string>
    <string name="payout">Payout</string>
    
    <!--  Miscellaneous -->
    <string name="currency_pair">Currency Pair</string>
    <string name="bids">Bids</string>
    <string name="asks">Asks</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>

    <!-- Main Menu Button Strings -->
    <string name="refreshButton">Update Widget(s)</string>
    <string name="orderbookButton">OrderBook</string>
    <string name="bitcoinChartsButton">Bitcoin Charts</string>
    <string name="minerstatsButton">Miner Stats</string>
    <string name="graphButton">Price Graph</string>
    <string name="exgraphButton">Web Charts</string>
    
    <!--  About Links -->
    <string name="donationAddress">1yjDmiukhB2i1XyVw5t7hpAK4WXo32d54</string>
    <string name="bitcoiniumGithub">https://github.com/veken0m/bitcoinium</string>
    <string name="xchangeGithub">https://github.com/timmolter/xchange</string>
</resources>