<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/actionbar_color2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
       	android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/widgetrefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:padding="10dp"
            android:background="@drawable/main_menu_button"
            android:text="@string/refreshButton" />
        <!-- android:drawableTop="@drawable/ -->

        <Button
            android:id="@+id/orderbook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:paddingBottom="6dp"
            android:background="@drawable/main_menu_button"
            android:text="@string/orderbookButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bitcoincharts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:paddingBottom="6dp"
            android:background="@drawable/main_menu_button"
            android:text="@string/bitcoinChartsButton" />

        <Button
            android:id="@+id/minerstats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:paddingBottom="6dp"
            android:gravity="bottom|center"
            android:background="@drawable/main_menu_button"
            android:text="@string/minerstatsButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/displaygraph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:paddingBottom="6dp"
            android:gravity="bottom|center"
            android:background="@drawable/main_menu_button"
            android:text="@string/graphButton" />

        <Button
            android:id="@+id/marketdepth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:paddingBottom="6dp"
            android:gravity="bottom|center"
            android:background="@drawable/main_menu_button"
            android:text="@string/exgraphButton" />
    </LinearLayout>

</LinearLayout>